--- a/nexus/nexus-service.yml
+++ b/nexus/nexus-service.yml
@@ -8,8 +8,11 @@ spec:
     app: nexus
   type: LoadBalancer
   ports:
-    - nodePort: 31000        
-      port: 8080
+    - port: 80
       targetPort: 8081
       protocol: TCP
       name: http
+    - port: 8085
+      targetPort: 8085
+      protocol: TCP
+      name: docker-repo
