--- a/nexus/nexus-deployment.yml
+++ b/nexus/nexus-deployment.yml
@@ -18,7 +18,7 @@ spec:
             claimName: nexus-pvc    
       containers:
         - name: nexus-container
-          image: "quay.io/travelaudience/docker-nexus:3.15.2"
+          image: "fsadykov/docker-nexus"
           env:
             - name: INSTALL4J_ADD_VM_PARAMS
               value: "-Xms1200M -Xmx1200M -XX:MaxDirectMemorySize=2G -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
