--- a/google-k8s-nexus/nexus-service.yml
+++ b/google-k8s-nexus/nexus-service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nexus-service
-  namespace: nexus
+  namespace: TOOLS
 spec:
   selector:
     app: nexus
