--- a/google-k8s-jenkins/jenkins-service.yaml
+++ b/google-k8s-jenkins/jenkins-service.yaml
@@ -5,7 +5,7 @@ metadata:
     app: jenkins-pod
     name: jenkins-pod
   name: jenkins-pod-645f85d8b6-4grcj
-  namespace: jenkins
+  namespace: TOOLS
 spec:
   ports:
   - nodePort: 30619
