--- a/google-k8s-jira/namespace.yml
+++ b/google-k8s-jira/namespace.yml
@@ -1,10 +1,5 @@
-{
-  "kind": "Namespace",
-  "apiVersion": "v1",
-  "metadata": {
-    "name": "jira",
-    "labels": {
-      "name": "jira"
-    }
-  }
-}
+apiVersion: v1
+kind: Namespace
+metadata: 
+  name: jenkins
+  namespace: TOOLS
