--- a/google-k8s-jira/pvc_jira.yml
+++ b/google-k8s-jira/pvc_jira.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: jira-home
+  namespace: TOOLS
 spec:
   accessModes:
     - ReadWriteOnce
