--- a/google-k8s-jenkins/jenkins-deployment.yaml
+++ b/google-k8s-jenkins/jenkins-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: jenkins-pod
-  namespace: TOOLS
+  namespace: tools
 spec:
   replicas: 1
   selector:
