--- a/google-k8s-jenkins/jenkins-pvc.yaml
+++ b/google-k8s-jenkins/jenkins-pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: jenkins-pv-claim
-  namespace: TOOLS
+  namespace: tools
   labels:
     app: jenkins-pod
 spec:
