--- a/google-k8s-nexus/nexus-deployment.yml
+++ b/google-k8s-nexus/nexus-deployment.yml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: nexus-deployment
-  namespace: TOOLS
+  namespace: tools
   labels:
     app: nexus
 spec:
