--- a/google-k8s-nexus/nexus-pvc.yml
+++ b/google-k8s-nexus/nexus-pvc.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: nexus-pvc
-  namespace: TOOLS
+  namespace: tools
   labels:
     app: nexus
 spec:
