--- a/google-k8s-jenkins/jenkins-pv.yaml
+++ b/google-k8s-jenkins/jenkins-pv.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: jenkins-volume
+  name: jenkins-pv
   labels:
-    app: jenkins-pod
+    app: jenkins
 spec:
   capacity:
-    storage: 20Gi
+    storage: 15Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
