--- a/google-k8s-vault/vault-deployment.yaml
+++ b/google-k8s-vault/vault-deployment.yaml
@@ -1,32 +1,31 @@
 apiVersion: v1
-kind: Service
+kind: PersistentVolumeClaim
 metadata:
-  name: vault
+  name: vault-pvc
+  namespace: test
   labels:
-    app: vault
-  namespace: tools
+    app: vault-deployment
 spec:
-  ports:
-    - name: vault
-      port: 80
-      targetPort: 8200
-  selector:
-    app: vault
-  type: LoadBalancer
+  accessModes:
+    - ReadWriteOnce
+  resources:  
+    requests:
+      storage: 10Gi
+
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   labels:
-    app: vault
+    app: vault-deployment
   name: vault
-  namespace: tools
+  namespace: test
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: vault
+        app: vault-deployment
     spec:
       containers:
       - image: vault
@@ -41,3 +40,27 @@ spec:
         env:
         - name: VAULT_DEV_ROOT_TOKEN_ID
           value: vault-root-token
+        volumeMounts:
+          - mountPath: /var/run
+            name: vault-pvc
+      volumes:
+        - name: vault-pvc
+          persistentVolumeClaim:
+            claimName: vault-pvc
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: vault-service
+  labels:
+    app: vault-deployment
+  namespace: test
+spec:
+  ports:
+    - name: vault
+      port: 80
+      targetPort: 8200
+  selector:
+    app: vault-deployment
+  type: LoadBalancer
