--- a/google-k8s-vault/vault-deployment.yaml
+++ b/google-k8s-vault/vault-deployment.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: vault-pvc
-  namespace: test
+  namespace: tools
   labels:
     app: vault-deployment
 spec:
   accessModes:
     - ReadWriteOnce
-  resources:  
+  resources:
     requests:
       storage: 10Gi
 
@@ -19,7 +19,7 @@ metadata:
   labels:
     app: vault-deployment
   name: vault
-  namespace: test
+  namespace: tools
 spec:
   replicas: 1
   template:
@@ -36,7 +36,7 @@ spec:
         securityContext:
          capabilities:
            add:
-             - IPC_LOCK 
+             - IPC_LOCK
         env:
         - name: VAULT_DEV_ROOT_TOKEN_ID
           value: vault-root-token
@@ -55,7 +55,7 @@ metadata:
   name: vault-service
   labels:
     app: vault-deployment
-  namespace: test
+  namespace: tools
 spec:
   ports:
     - name: vault
