--- a/google-k8s-vault/vault-secret.yaml
+++ b/google-k8s-vault/vault-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: vault-secret
+  namespace: tools
 type: Opaque
 data:
   password: U1EyNVNqa0NrQ1R1bnVjdzUxODJqWFFmZg==
