added pvc in jenkins-deployment.yaml

--- a/google-k8s-jenkins/jenkins-deployment.yaml
+++ b/google-k8s-jenkins/jenkins-deployment.yaml
@@ -35,3 +35,6 @@ spec:
           hostPath:
             path: /var/run
         - name: jenkins-home
+        - name: jenkins-persistent-volume-claim
+          persistentVolumeClaim:
+            claimName: jenkins-pvc
